hw-5 first comit

--- a/portfolio.html
+++ b/portfolio.html
@@ -241,8 +241,8 @@
             solutions.
           </p>
         </div>
-        <div class="ft-media">
-          <p class="social-media">Social media</p>
+        <div class="fdiv-social">
+          <p class="fp-social">Social media</p>
           <ul class="ft-net-ul">
             <li class="ft-net-li"> 
               <a class="ft-net-a" href="">
@@ -273,6 +273,17 @@
               </a>
             </li>
           </ul>
+        </div>
+        <div class="fsubs-div">
+          <form>
+            <p class="fsubs-p" style="margin-bottom: 15px;">Subscribe</p>
+            <input type="email" name="subscriber_email" placeholder="E-mail" class="fsubs-input" />
+            <button type="submit" class="fsubs-btn">Subscribe
+             <svg class="subs-ico" width="24" height="24">
+                <use href="./images/icons.svg#icon-subscribe"></use>
+             </svg>
+            </button>
+          </form>
         </div>
       </div>    
     </footer>
