--- a/index.html
+++ b/index.html
@@ -411,8 +411,8 @@
           </ul>
         </div>
         <div class="fsubs-div">
+          <p class="fsubs-p" style="margin-bottom: 15px;">Subscribe</p>
           <form name="subscribe_form">
-            <p class="fsubs-p" style="margin-bottom: 15px;">Subscribe</p>
             <input type="email" name="subscriber_email" placeholder="E-mail" class="fsubs-input" />
             <button type="submit" class="fsubs-btn">Subscribe
              <svg class="subs-ico" width="24" height="24">
@@ -433,8 +433,8 @@
           </svg>
         </button>
         
-        <strong class="modal-caption">Leave your contacts and we will call you back</strong>
-          <form class="modal-form" name="order_form" autocomplete="on">
+        <p class="modal-caption">Leave your contacts and we will call you back</p>
+        <form class="modal-form" name="order_form" autocomplete="on">
           <label class="modal-form-field">
             <span class="modal-form-label">Name</span>
             <input type="text" name="order_form_name" class="modal-form-input" />
