--- a/index.html
+++ b/index.html
@@ -411,14 +411,16 @@
           </ul>
         </div>
         <div class="fsubs-div">
-          <p class="fsubs-p" style="margin-bottom: 15px;">Subscribe</p>
-          <form name="subscribe_form">
-            <input type="email" name="subscriber_email" placeholder="E-mail" class="fsubs-input" />
-            <button type="submit" class="fsubs-btn">Subscribe
-             <svg class="subs-ico" width="24" height="24">
-                <use href="./images/icons.svg#icon-subscribe"></use>
-             </svg>
-            </button>
+          <p class="fsubs-p">Subscribe</p>
+          <form name="subs-form">
+            <label class="subs-label">
+              <input type="email" name="subscriber_email" placeholder="E-mail" class="fsubs-input" />
+              <button type="submit" class="fsubs-btn">Subscribe
+               <svg class="subs-ico" width="24" height="24">
+                  <use href="./images/icons.svg#icon-subscribe"></use>
+               </svg>
+              </button>
+            </label>
           </form>
         </div>
       </div>    
