fucking autochecks try3

--- a/index.html
+++ b/index.html
@@ -412,15 +412,15 @@
         </div>
         <div class="fsubs-div">
           <p class="fsubs-p">Subscribe</p>
-          <form name="subs-form">
+          <form name="subscriber-form" class="subs-form">
             <label class="subs-label">
-              <input type="email" name="subscriber_email" placeholder="E-mail" class="fsubs-input" />
-              <button type="submit" class="fsubs-btn">Subscribe
-               <svg class="subs-ico" width="24" height="24">
-                  <use href="./images/icons.svg#icon-subscribe"></use>
-               </svg>
-              </button>
+              <input type="email" name="subscriber-email" placeholder="E-mail" class="fsubs-input" />
             </label>
+            <button type="submit" class="fsubs-btn">Subscribe
+              <svg class="subs-ico" width="24" height="24">
+                 <use href="./images/icons.svg#icon-subscribe"></use>
+              </svg>
+            </button>
           </form>
         </div>
       </div>    
