--- a/portfolio.html
+++ b/portfolio.html
@@ -275,13 +275,15 @@
           </ul>
         </div>
         <div class="fsubs-div">
-          <p class="fsubs-p" style="margin-bottom: 15px;">Subscribe</p>
-          <form>
-            <input type="email" name="subscriber_email" placeholder="E-mail" class="fsubs-input" />
+          <p class="fsubs-p">Subscribe</p>
+          <form name="subscriber-form" class="subs-form">
+            <label class="subs-label">
+              <input type="email" name="subscriber-email" placeholder="E-mail" class="fsubs-input" />
+            </label>
             <button type="submit" class="fsubs-btn">Subscribe
-             <svg class="subs-ico" width="24" height="24">
-                <use href="./images/icons.svg#icon-subscribe"></use>
-             </svg>
+              <svg class="subs-ico" width="24" height="24">
+                 <use href="./images/icons.svg#icon-subscribe"></use>
+              </svg>
             </button>
           </form>
         </div>
