--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
           <div class="form-div">
             <label for="user-name" class="modal-form-label">Name</label>
             <div class="div-input-svg">
-              <input type="text" name="user-name" id="user-name" class="modal-form-input" />
+              <input type="text" name="user_name" id="user-name" class="modal-form-input" />
               <svg class="md-input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-user"></use>
               </svg>
@@ -450,7 +450,7 @@
           <div class="form-div">
             <label for="user-tel" class="modal-form-label">Phone</label>
             <div class="div-input-svg">
-              <input type="tel" name="user-tel" id="user-tel" class="modal-form-input" />
+              <input type="tel" name="user_tel" id="user-tel" class="modal-form-input" />
               <svg class="md-input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone"></use>
               </svg>
@@ -458,9 +458,9 @@
           </div> 
 
           <div class="form-div">
-            <label class="modal-form-label">Email</label>
+            <label for="order-form-email" class="modal-form-label">Email</label>
             <div class="div-input-svg">
-              <input type="email" name="order-form-email" class="modal-form-input" />
+              <input type="email" name="user_email" id="order-form-email" class="modal-form-input" />
               <svg class="md-input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-email"></use>
               </svg>
