--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
     </footer>
 
      <!-- Modal window -->
-    <div class="backdrop is-hidde" data-modal>     
+    <div class="backdrop is-hidden" data-modal>     
         <div class="modal">
         <button class="modal-btn" type="button" data-modal-close>
           <svg class="md-icon" width="8" height="8">
@@ -440,7 +440,7 @@
           <div class="form-div">
             <label for="user-name" class="modal-form-label">Name</label>
             <div class="div-input-svg">
-              <input type="text" name="user_name" id="user-name" class="modal-form-input" />
+              <input type="text" name="user-name" id="user-name" class="modal-form-input" />
               <svg class="md-input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-user"></use>
               </svg>
@@ -458,25 +458,26 @@
           </div> 
 
           <div class="form-div">
-            <label for="order-form-email" class="modal-form-label">Email</label>
+            <label for="user-email" class="modal-form-label">Email</label>
             <div class="div-input-svg">
-              <input type="email" name="user_email" id="order-form-email" class="modal-form-input" />
+              <input type="email" name="user_email" id="user-email" class="modal-form-input" />
               <svg class="md-input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-email"></use>
               </svg>
             </div>
           </div>
 
-          <div class="form-div">
-            <label class="modal-form-label">Comment</label>
-              <textarea class="modal-form-txt" name="modal-txtarea" placeholder="Text input"></textarea>
+          <div class="form-div txtarea-div">
+            <label for="user-comment" class="modal-form-label">Comment</label>
+              <textarea id="user-comment" class="modal-comment" name="user-comment" placeholder="Text input"></textarea>
           </div>
 
-
+          <div class="checkbox-div">
           <label class="modal-label-check">           
             <input type="checkbox" name="privacy-policy" id="privacy-policy" class="privacy-checkbox" />
             <span>I accept the terms and conditions of the <a href="" class="a-policy" >Privacy Policy</a></span>            
           </label>
+          </div>
 
           <button type="submit" class="hero-btn">Send</button>
           
