--- a/index.html
+++ b/index.html
@@ -472,11 +472,16 @@
               <textarea id="user-comment" class="modal-comment" name="user-comment" placeholder="Text input"></textarea>
           </div>
 
-          <div class="checkbox-div">
-          <label class="modal-label-check">           
-            <input type="checkbox" name="privacy-policy" id="privacy-policy" class="privacy-checkbox" />
-            <span>I accept the terms and conditions of the <a href="" class="a-policy" >Privacy Policy</a></span>            
-          </label>
+          <div class="privacy-div">           
+            <input id="user-privacy" type="checkbox" name="user-privacy" id="privacy-policy" class="privacy-checkbox visually-hidden" value="true" />
+            <label for="user-privacy" class="privacy-label">I accept the terms and conditions of the 
+              <span class="privacy-span">
+                  <svg class="privacy-icon" width="10" height="8">
+                    <use href="./images/icons.svg#icon-close"></use>
+                  </svg>
+              </span>
+              <a href="" class="a-policy" >Privacy Policy</a>
+            </label>
           </div>
 
           <button type="submit" class="hero-btn">Send</button>
