--- a/index.html
+++ b/index.html
@@ -473,14 +473,14 @@
           </div>
 
           <div class="privacy-div">           
-            <input id="user-privacy" type="checkbox" name="user-privacy" id="privacy-policy" class="privacy-checkbox visually-hidden" value="true" />
-            <label for="user-privacy" class="privacy-label">I accept the terms and conditions of the 
+            <input id="user-privacy" type="checkbox" name="user-privacy" class="privacy-checkbox visually-hidden" value="true" />
+            <label for="user-privacy" class="privacy-label">
               <span class="privacy-span">
-                  <svg class="privacy-icon" width="10" height="8">
-                    <use href="./images/icons.svg#icon-close"></use>
+                  <svg class="privacy-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-checked"></use>
                   </svg>
               </span>
-              <a href="" class="a-policy" >Privacy Policy</a>
+              I accept the terms and conditions of the <a href="" class="a-policy" >Privacy Policy</a>
             </label>
           </div>
 
