--- a/index.html
+++ b/index.html
@@ -480,16 +480,15 @@
                     <use href="./images/icons.svg#icon-checked"></use>
                   </svg>
               </span>
-              I accept the terms and conditions of the <a href="" class="a-policy" >Privacy Policy</a>
+              I accept the terms and conditions of the
+              <a href="" class="a-policy" >Privacy Policy</a>
             </label>
           </div>
 
-          <button type="submit" class="hero-btn">Send</button>
-          
+          <button type="submit" class="hero-btn">Send</button> 
 
         </form>
       </div>
-
     </div>
         
     <script src="./js/modal.js"></script>
